# Blank-Replit-LordRusty23

./: .replit  Gemfile  bun.lockb  erl_crash.dump  package-lock.json  package.json  pyproject.toml  replit.nix
.bundle/ruby/3.1.0/cache/: twilio-ruby-7.2.3.gem
.bundle/ruby/3.1.0/extensions/x86_64-linux/3.1.0/racc-1.8.1/: gem_make.out
.bundle/ruby/3.1.0/extensions/x86_64-linux/3.1.0/yajl-ruby-1.4.3/: gem_make.out
.bundle/ruby/3.1.0/specifications/: concurrent-ruby-1.3.3.gemspec  faraday-2.10.1.gemspec  faraday-net_http-3.1.1.gemspec  jwt-2.8.2.gemspec  net-http-0.4.1.gemspec  racc-1.8.1.gemspec  ruby-progressbar-1.13.0.gemspec  ruby-rc4-0.1.5.gemspec  sexp_processor-4.17.2.gemspec  statsd-ruby-1.5.0.gemspec  twilio-ruby-7.2.3.gemspec  uri-0.13.0.gemspec  yajl-ruby-1.4.3.gemspec
.bundle/ruby/3.2.0/cache/: ruby-kafka-1.5.0.gem  ruby-macho-4.1.0.gem  ruby-saml-1.16.0.gem
.bundle/ruby/3.2.0/gems/ruby-ole-1.2.13.1/: ChangeLog
.bundle/ruby/3.2.0/gems/ruby-prof-1.7.0/test/: crash2.rb  dynamic_method_test.rb  printers_test.rb  start_stop_test.rb  test_helper.rb  unique_call_path_test.rb  yarv_test.rb
.bundle/ruby/3.2.0/specifications/: base64-0.2.0.gemspec  digest-crc-0.6.5.gemspec  dogstatsd-ruby-5.6.1.gemspec  ffi-1.17.0-x86_64-linux-gnu.gemspec  logger-1.6.0.gemspec  nokogiri-1.16.7-x86_64-linux.gemspec  rexml-3.3.4.gemspec  ruby-kafka-1.5.0.gemspec  ruby-macho-4.1.0.gemspec  ruby-ole-1.2.13.1.gemspec  ruby-prof-1.7.0.gemspec  ruby-saml-1.16.0.gemspec  ruby-vips-2.2.2.gemspec  ruby_parser-3.21.1.gemspec
.hex/: cache.ets
(+9 files in other folders)
